refactor: ArchiveImage와 UserVisitPlace의 공백 검증로직 내부구현 변경